add 5th chapter to select list

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <span><input type="checkbox" value="2" v-model="selectedChapters">2</span>
       <span><input type="checkbox" value="3" v-model="selectedChapters">3</span>
       <span><input type="checkbox" value="4" v-model="selectedChapters">4</span>
+      <span><input type="checkbox" value="4" v-model="selectedChapters">5</span>
     </section>
     <div class="lang-card card" id="answer" v-if="isAnswerShown">
       <article class="answer">
@@ -41,6 +42,6 @@
       <button v-on:click="nextQuestion" class="btn-success">Next</button>
     </div>
   </div>
-  <script src="scripts.js?v=1.1" type="module"></script>
+  <script src="scripts.js?v=1.2" type="module"></script>
 </body>
 </html>
